added 3 recipes and a folder for img and future static ressources

--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
 	<body>
 		<h1><strong>ODIN</strong> Recipes</h1>
 		<ul>
-			<li><a href="#">Boeuf bourguignon</a></li>
-			<li><a href="#">Boeuf bourguignon</a></li>
-			<li><a href="#">Boeuf bourguignon</a></li>
-			<li><a href="#">Boeuf bourguignon</a></li>
+			<li><a href="recipe/beefbourguignon.html">Boeuf bourguignon</a></li>
+			<li><a href="recipe/lasagna.html">Lasagna</a></li>
+			<li><a href="recipe/chickenavocado.html">Chicken avocado cup</a></li>
 		</ul>
 	</body>
 </html>
