html rework for the recipe page detail + css adjustment tring to replicate a flat design

--- a/index.html
+++ b/index.html
@@ -9,33 +9,41 @@
 	<body>
 		<header>
 			<p id="nav_title"><strong>ODIN</strong> Recipes</p>
+			<ul class="nav_link_list">
+				<li><a href="#"> Link 1 </a></li>
+				<li><a href="#"> Link 1 </a></li>
+				<li><a href="#"> Link 1 </a></li>
+			</ul>
 		</header>
+		<p class="catch_text">Find the best recipe for your next meal.</p>
 		<main>
-			<p>Recipes list</p>
 			<div class="box_container">
-				<div class="card">
-					<a href="recipe/chickenavocado.html">
-					<img src="static/img/chickenavocado.jpg" alt="chicken avocado cup">
-					<div class="card_title">
-						Chicken avocado cup
+			<div class="container_title">Looking for an idea ?</div>
+				<div class="card_container">
+					<div class="card">
+						<a href="recipe/chickenavocado.html">
+						<img src="static/img/chickenavocado.jpg" alt="chicken avocado cup">
+						<div class="card_title">
+							Chicken avocado cup
+						</div>
+						</a>
 					</div>
-					</a>
-				</div>
-				<div class="card">
-					<a href="recipe/beefbourguignon.html">
-					<img src="static/img/beef.jpg" alt="beef bourguignon">
-					<div class="card_title">
-						beef bourguignon	
+					<div class="card">
+						<a href="recipe/beefbourguignon.html">
+						<img src="static/img/beef.jpg" alt="beef bourguignon">
+						<div class="card_title">
+							Beef bourguignon	
+						</div>
+						</a>
 					</div>
-					</a>
-				</div>
-				<div class="card">
-					<a href="recipe/lasagna.html">
-					<img src="static/img/lasagne.jpg" alt="lasagna">
-					<div class="card_title">
-						lasagna	
+					<div class="card">
+						<a href="recipe/lasagna.html">
+						<img src="static/img/lasagne.jpg" alt="lasagna">
+						<div class="card_title">
+							Lasagna	
+						</div>
+						</a>
 					</div>
-					</a>
 				</div>
 			</div>
 		</main>
