--- a/recipe/chickenavocado.html
+++ b/recipe/chickenavocado.html
@@ -4,25 +4,38 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title> Recipes </title>
+		<link rel="stylesheet" href="../static/css/style.css">
 	</head>
 	<body>
-		<h1><strong>ODIN</strong> Recipes</h1>
-		<h2>Lasagna</h2>
-		<img src="../static/img/chickenavocado.jpg" alt="Chicken avocado cups" width="380px" height="380px"/>
-		<h3>Ingredients list</h3>
-		<ul>
-			<li>Chicken</li>
-			<li>1 tbsp cilantro</li>
-			<li>half tsp chili powder</li>
-			<li>3 avocados</li>
-			<li>lime juice</li>
-		</ul>
-		<h3>Instructions</h3>
-		<ol>
-			<li>Stir chicken, cilantro and chili powder together in a bowl.</li>
-			<li>Arrange avocado halves on serving dish and brush with lime juice. Spoon chicken mixture into avocado halves.</li>
-		</ol>
-		<a href="https://www.allrecipes.com/recipe/240581/mexi-chicken-avocado-cups/"><em>Source</em></a>
-		<a href="../index.html">Back to the recipe list</a>
+		<header>
+			<p id="nav_title"><strong>ODIN</strong> Recipes</p>
+			<ul class="nav_link_list">
+				<li><a href="#"> Link 1 </a></li>
+				<li><a href="#"> Link 1 </a></li>
+				<li><a href="#"> Link 1 </a></li>
+			</ul>
+		</header>
+		<p class="catch_text">Ready to cook a tasty meal ?</p>
+		<main>
+			<p class="container_title">Chicken Avocado Cups</p>
+			<div class="box_container">
+				<img src="../static/img/chickenavocado.jpg" alt="Chicken avocado cups" width="380px" height="380px"/>
+				<h3>Ingredients list</h3>
+				<ul>
+					<li>Chicken</li>
+					<li>1 tbsp cilantro</li>
+					<li>half tsp chili powder</li>
+					<li>3 avocados</li>
+					<li>lime juice</li>
+				</ul>
+				<h3>Instructions</h3>
+				<ol>
+					<li>Stir chicken, cilantro and chili powder together in a bowl.</li>
+					<li>Arrange avocado halves on serving dish and brush with lime juice. Spoon chicken mixture into avocado halves.</li>
+				</ol>
+				<a href="https://www.allrecipes.com/recipe/240581/mexi-chicken-avocado-cups/"><em>Source</em></a>
+				<a href="../index.html">Back to the recipe list</a>
+			</div>
+		</main>
 	</body>
 </html>
