--- a/recipe/lasagna.html
+++ b/recipe/lasagna.html
@@ -4,31 +4,44 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title> Recipes </title>
+		<link rel="stylesheet" href="../static/css/style.css">
 	</head>
 	<body>
-		<h1><strong>ODIN</strong> Recipes</h1>
-		<h2>Lasagna</h2>
-		<img src="../static/img/lasagne.jpg" alt="Lasagna" width="380px" height="380px"/>
-		<h3>Ingredients list</h3>
-		<ul>
-			<li>Meat</li>
-			<li>Onions</li>
-			<li>Canned tomatoes</li>
-			<li>Parsley</li>
-			<li>Garlic</li>
-			<li>Spices</li>
-			<li>Cheese</li>
-			<li>Noodles</li>
-		</ul>
-		<h3>Instructions</h3>
-		<ol>
-			<li>Cook the ground meat in a skillet until browned and crumbly. Add the onion and continue cooking until it's translucent. Stir in the canned tomato products, parsley garlic, basil, salt and oregano.</li>
-			<li>Boils the lasagna noodles in lightly salted water until they're al dente.</li>
-			<li>Mix cottage cheese, parmesan cheese, the remaining parsley, the remaining salt, and pepper in a bowl.</li>
-			<li>Layer the ingredients accoreding to the recipe until the lasagna is assembled.</li>
-			<li>Cover with foil and bake in the preheated oven for about half an hour. Remove the foil and continue baking until the top is golden brown.</li>
-		</ol>
-		<a href="https://www.allrecipes.com/recipe/19344/homemade-lasagna/"><em>Source</em></a>
-		<a href="../index.html">Back to the recipe list</a>
+		<header>
+			<p id="nav_title"><strong>ODIN</strong> Recipes</p>
+			<ul class="nav_link_list">
+				<li><a href="#"> Link 1 </a></li>
+				<li><a href="#"> Link 1 </a></li>
+				<li><a href="#"> Link 1 </a></li>
+			</ul>
+		</header>
+		<p class="catch_text">Ready to cook a tasty meal ?</p>
+		<main>
+			<p class="container_title">Lasagna</p>
+			<div class="box_container">
+				<img src="../static/img/lasagne.jpg" alt="Lasagna" width="380px" height="380px"/>
+				<h3>Ingredients list</h3>
+				<ul>
+					<li>Meat</li>
+					<li>Onions</li>
+					<li>Canned tomatoes</li>
+					<li>Parsley</li>
+					<li>Garlic</li>
+					<li>Spices</li>
+					<li>Cheese</li>
+					<li>Noodles</li>
+				</ul>
+				<h3>Instructions</h3>
+				<ol>
+					<li>Cook the ground meat in a skillet until browned and crumbly. Add the onion and continue cooking until it's translucent. Stir in the canned tomato products, parsley garlic, basil, salt and oregano.</li>
+					<li>Boils the lasagna noodles in lightly salted water until they're al dente.</li>
+					<li>Mix cottage cheese, parmesan cheese, the remaining parsley, the remaining salt, and pepper in a bowl.</li>
+					<li>Layer the ingredients accoreding to the recipe until the lasagna is assembled.</li>
+					<li>Cover with foil and bake in the preheated oven for about half an hour. Remove the foil and continue baking until the top is golden brown.</li>
+				</ol>
+				<a href="https://www.allrecipes.com/recipe/19344/homemade-lasagna/"><em>Source</em></a>
+				<a href="../index.html">Back to the recipe list</a>
+			</div>
+		</main>
 	</body>
 </html>
