improved recipes' pages designs and created a page 'about' for insight on the project and personal detail

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 		<header>
 			<p id="nav_title"><strong>ODIN</strong> Recipes</p>
 			<ul class="nav_link_list">
-				<li><a href="#"> Link 1 </a></li>
-				<li><a href="#"> Link 1 </a></li>
+				<li><a href="index.html"> Home </a></li>
+				<li><a href="about.html"> About </a></li>
 				<li><a href="#"> Link 1 </a></li>
 			</ul>
 		</header>
@@ -24,7 +24,8 @@
 						<a href="recipe/chickenavocado.html">
 						<img src="static/img/chickenavocado.jpg" alt="chicken avocado cup">
 						<div class="card_title">
-							Chicken avocado cup
+								<p class="recipe_tag">Quick and low budget</p>
+								<p>Chicken avocado cup</p>
 						</div>
 						</a>
 					</div>
@@ -32,7 +33,8 @@
 						<a href="recipe/beefbourguignon.html">
 						<img src="static/img/beef.jpg" alt="beef bourguignon">
 						<div class="card_title">
-							Beef bourguignon	
+								<p class="recipe_tag">Traditional french dish</p>
+								<p>Beef Bourguignon</p>
 						</div>
 						</a>
 					</div>
@@ -40,7 +42,9 @@
 						<a href="recipe/lasagna.html">
 						<img src="static/img/lasagne.jpg" alt="lasagna">
 						<div class="card_title">
-							Lasagna	
+							<p class="recipe_tag">Perfect for a family</p>
+							<p>Lasagna</p>
+							
 						</div>
 						</a>
 					</div>
