--- a/recipe/beefbourguignon.html
+++ b/recipe/beefbourguignon.html
@@ -10,48 +10,57 @@
 		<header>
 			<p id="nav_title"><strong>ODIN</strong> Recipes</p>
 			<ul class="nav_link_list">
-				<li><a href="#"> Link 1 </a></li>
-				<li><a href="#"> Link 1 </a></li>
+				<li><a href="../index.html"> Home </a></li>
+				<li><a href="../about.html"> About </a></li>
 				<li><a href="#"> Link 1 </a></li>
 			</ul>
 		</header>
 		<p class="catch_text">Ready to cook a tasty meal ?</p>
 		<main>
-			<p class="container_title">Beef Bourguignon</p>
 			<div class="box_container">
-				<img src="../static/img/beef.jpg" alt="Beef bourguignon" width="380px" height="380px"/>
-				<h3>Ingredients list</h3>
-				<ul>
-					<li>Wine</li>
-					<li>Brandy</li>
-					<li>Onions</li>
-					<li>Carrots</li>
-					<li>Olive oil</li>
-					<li>Parsley</li>
-					<li>Bay leaf</li>
-					<li>Garlic</li>
-					<li>Mushrooms</li>
-					<li>Bacon</li>
-					<li>Flour</li>
-					<li>Broth</li>
-					<li>Butter</li>
-					<li>Beef</li>
-				</ul>
-				<h3>Instructions</h3>
-				<ol>
-					<li>Start marinating the meat two days in advance. Chill in the fridge.</li>
-					<li>Brown the beef in olive oil until browned on all sides, then transfer to a bowl.</li>
-					<li>Sauté the bacon in the same skillet, then move the bacon to the beef bowl.</li>
-					<li>Deglaze the skillet with a cup of the marinade.</li>
-					<li>Sauté the onions and carrots. Move the veggies to the bowl with the meat.</li>
-					<li>Add the flour to the skillet and stir until brown.</li>
-					<li>Add the tomato paste, garlic, broth, marinade, and salt and pepper.</li>
-					<li>Whisk until smooth, then transfer to the bowl with the meat and veggies.</li>
-					<li>Transfer the mixture to a baking dish and bake for three hours.</li>
-					<li>Sauté the mushrooms, then stir the mushrooms into the bourguignon.</li>
-				</ol>
-				<a href="https://www.allrecipes.com/recipe/16167/beef-bourguignon-i"><em>Source</em></a>
-				<a href="../index.html">Back to the recipe list</a>
+				<div class="recipe_container">
+					<img class="recipe_img" src="../static/img/beef.jpg" alt="Beef bourguignon" />
+					<div class="recipe_desc">
+						<p class="container_title">Beef Bourguignon</p>
+						<p>Considered by many to be the mother of all stews, Beef Bourguignon is a French dish made with beef, bacon lardons, carrots, onions and mushrooms slow cooked in a rich red wine sauce.
+
+For the most magnificent stew of your life, start this 2 days before you plan to serve it.</p>
+					</div>
+				</div>
+				<div class="recipe_content">
+						<p>Ingredients list</p>
+					<ul>
+						<li>Wine</li>
+						<li>Brandy</li>
+						<li>Onions</li>
+						<li>Carrots</li>
+						<li>Olive oil</li>
+						<li>Parsley</li>
+						<li>Bay leaf</li>
+						<li>Garlic</li>
+						<li>Mushrooms</li>
+						<li>Bacon</li>
+						<li>Flour</li>
+						<li>Broth</li>
+						<li>Butter</li>
+						<li>Beef</li>
+					</ul>
+					<p>Instructions</p>
+					<ol>
+						<li>Start marinating the meat two days in advance. Chill in the fridge.</li>
+						<li>Brown the beef in olive oil until browned on all sides, then transfer to a bowl.</li>
+						<li>Sauté the bacon in the same skillet, then move the bacon to the beef bowl.</li>
+						<li>Deglaze the skillet with a cup of the marinade.</li>
+						<li>Sauté the onions and carrots. Move the veggies to the bowl with the meat.</li>
+						<li>Add the flour to the skillet and stir until brown.</li>
+						<li>Add the tomato paste, garlic, broth, marinade, and salt and pepper.</li>
+						<li>Whisk until smooth, then transfer to the bowl with the meat and veggies.</li>
+						<li>Transfer the mixture to a baking dish and bake for three hours.</li>
+						<li>Sauté the mushrooms, then stir the mushrooms into the bourguignon.</li>
+					</ol>
+					<a href="https://www.allrecipes.com/recipe/16167/beef-bourguignon-i"><em>Source</em></a>
+					<button class="button_return" ><a href="../index.html">Back to the recipe list</a></button>
+				</div>
 			</div>
 		</main>
 	</body>
