--- a/recipe/chickenavocado.html
+++ b/recipe/chickenavocado.html
@@ -3,24 +3,30 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title> Recipes </title>
+		<title> Odin's lasagna </title>
 		<link rel="stylesheet" href="../static/css/style.css">
 	</head>
 	<body>
 		<header>
 			<p id="nav_title"><strong>ODIN</strong> Recipes</p>
 			<ul class="nav_link_list">
-				<li><a href="#"> Link 1 </a></li>
-				<li><a href="#"> Link 1 </a></li>
+				<li><a href="../index.html"> Home </a></li>
+				<li><a href="../about.html"> About </a></li>
 				<li><a href="#"> Link 1 </a></li>
 			</ul>
 		</header>
 		<p class="catch_text">Ready to cook a tasty meal ?</p>
 		<main>
-			<p class="container_title">Chicken Avocado Cups</p>
 			<div class="box_container">
-				<img src="../static/img/chickenavocado.jpg" alt="Chicken avocado cups" width="380px" height="380px"/>
-				<h3>Ingredients list</h3>
+				<div class="recipe_container">
+					<img class="recipe_img" src="../static/img/chickenavocado.jpg" alt="chicken avocado cups" />
+					<div class="recipe_desc">
+						<p class="container_title">Chicken avocado cups</p>
+						<p>A dish made of chicken and avocado, no cooking required. It's a quick, healthy, and delicious recipe guaranteed to make you feel and look good. </p>
+					</div>
+				</div>
+				<div class="recipe_content">
+						<p>Ingredients list</p>
 				<ul>
 					<li>Chicken</li>
 					<li>1 tbsp cilantro</li>
@@ -28,13 +34,14 @@
 					<li>3 avocados</li>
 					<li>lime juice</li>
 				</ul>
-				<h3>Instructions</h3>
+					<p>Instructions</p>
 				<ol>
 					<li>Stir chicken, cilantro and chili powder together in a bowl.</li>
 					<li>Arrange avocado halves on serving dish and brush with lime juice. Spoon chicken mixture into avocado halves.</li>
 				</ol>
 				<a href="https://www.allrecipes.com/recipe/240581/mexi-chicken-avocado-cups/"><em>Source</em></a>
-				<a href="../index.html">Back to the recipe list</a>
+					<button class="button_return" ><a href="../index.html">Back to the recipe list</a></button>
+				</div>
 			</div>
 		</main>
 	</body>
