--- a/recipe/chickenavocado.html
+++ b/recipe/chickenavocado.html
@@ -40,7 +40,7 @@
 					<li>Arrange avocado halves on serving dish and brush with lime juice. Spoon chicken mixture into avocado halves.</li>
 				</ol>
 				<a href="https://www.allrecipes.com/recipe/240581/mexi-chicken-avocado-cups/"><em>Source</em></a>
-					<button class="button_return" ><a href="../index.html">Back to the recipe list</a></button>
+					<a href="../index.html"><button class="button_return" >Back to the recipe list</button></a>
 				</div>
 			</div>
 		</main>
