--- a/recipe/lasagna.html
+++ b/recipe/lasagna.html
@@ -46,7 +46,7 @@
 					<li>Cover with foil and bake in the preheated oven for about half an hour. Remove the foil and continue baking until the top is golden brown.</li>
 				</ol>
 					<a href="https://www.allrecipes.com/recipe/19344/homemade-lasagna/"><em>Source</em></a>
-					<button class="button_return" ><a href="../index.html">Back to the recipe list</a></button>
+					<a href="../index.html"><button class="button_return" >Back to the recipe list</button></a>
 				</div>
 			</div>
 		</main>
