added color palette and another section in index.html

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
 
 				<p class="container_title"> My vision and inspirations. </p>
 				<p>Here the goal isn't to create a fancy website ready to use with alot of content and interaction. I personally decided to focus on creating a basic webpage trying to produce a modern flat design. 
-					My main inspiration is <a href="https://allrecipes.com">Allrecipes.com</a> website and I tried to look at other cooking page such as <a href="https://marmiton.org">marmiton.org</a>.
+					My main inspiration is <a href="https://allrecipes.com">Allrecipes.com</a> website and I tried to look at other cooking page such as <a href="https://marmiton.org">marmiton.org</a> and <a href="https://recipetineats.com">recipetineats.com</a>
 				This page has actually no color palette and I decided to start only with some shade white and some shade of grey.
 				/!\ it is not responsive, I will update the project while learning more until I feel I can't add more css and js.
 				</p>
