--- a/index.html
+++ b/index.html
@@ -49,6 +49,15 @@
 						</a>
 					</div>
 				</div>
+				<div class="recipe_container" >
+					<img class="recipe_img" src="static/img/beef.jpg" alt="Beef bourguignon" />
+					<div class="recipe_desc" id="odin_choice">
+						<p class="container_title" id="odin_title">Odin's choice</p>
+						<p class="container_title">Beef Bourguignon</p>
+						<button class="button bg_white" href="recipe/beefbourguignon.html"> check this recipe </button>
+					</div>
+				</div>
+					
 			</div>
 		</main>
 	</body>
