footer added to the page

--- a/index.html
+++ b/index.html
@@ -54,11 +54,21 @@
 					<div class="recipe_desc" id="odin_choice">
 						<p class="container_title" id="odin_title">Odin's choice</p>
 						<p class="container_title">Beef Bourguignon</p>
-						<button class="button bg_white" href="recipe/beefbourguignon.html"> check this recipe </button>
+						<a class="button bg_white" href="recipe/beefbourguignon.html"> Open </a>
 					</div>
 				</div>
 					
 			</div>
 		</main>
+		<footer>
+			<ul class="footer_links">
+				<p>Odin Recipes</p>
+				<a href="#nav_title"><il>Home</il></a>
+				<a href="about.html"> <li>About </li></a>
+			</ul>
+			<div class="footer_container">
+				<p> Made by <a href="http://github.com/Raaynbo"> Raaynbo</a> </p>
+			</div>
+		</footer>
 	</body>
 </html>
